flexible-date-duration,pitch-templates and lab-conditions
