# app/Repositories/Api/Master/MasterRepository.php
@@ -17,6 +17,9 @@ use App\Models\Rank;
 use App\Models\ProjectSubmissionRequirement;
 use App\Models\AchievementConditionList;
 use App\Models\Host;
+use App\Models\FlexibleExpireDateDuration;
+use App\Models\PitchTemplate;
+use App\Models\LabCondition;
 class MasterRepository implements MasterInterface{
 
     private $category;
@@ -34,7 +37,10 @@ class MasterRepository implements MasterInterface{
     private $project_submission_requirements;
     private $achievement_condition_list;
     private $host;
-    function __construct(Category $category,Skill $skill,Tag $tag,ProjectIndustry $project_industry, ProjectType $project_type, ProjectStage $project_stage, ProjectVertical $project_verticals, ProjectStatus $project_status, SocialLink $social_link, SkillGroup $skill_group, SkillStack $skill_stack, Rank $rank, ProjectSubmissionRequirement $project_submission_requirements, AchievementConditionList $achievement_condition_list, Host $host) {
+    private $flexible_expireDate_duration;
+    private $pitch_template;
+    private $lab_condition;
+    function __construct(Category $category,Skill $skill,Tag $tag,ProjectIndustry $project_industry, ProjectType $project_type, ProjectStage $project_stage, ProjectVertical $project_verticals, ProjectStatus $project_status, SocialLink $social_link, SkillGroup $skill_group, SkillStack $skill_stack, Rank $rank, ProjectSubmissionRequirement $project_submission_requirements, AchievementConditionList $achievement_condition_list, Host $host, FlexibleExpireDateDuration $flexible_expireDate_duration,PitchTemplate $pitch_template, LabCondition $lab_condition) {
         $this->category = $category;
         $this->skill = $skill;
         $this->tag=$tag;
@@ -50,6 +56,9 @@ class MasterRepository implements MasterInterface{
         $this->project_submission_requirements=$project_submission_requirements;
         $this->achievement_condition_list=$achievement_condition_list;
         $this->host=$host;
+        $this->flexible_expireDate_duration=$flexible_expireDate_duration;
+        $this->pitch_template=$pitch_template;
+        $this->lab_condition=$lab_condition;
     }
 
     public function getCategories($request)
@@ -196,6 +205,35 @@ class MasterRepository implements MasterInterface{
            return $this->host->getHosts($request->language,$request->search);
         }catch(\Exception){
           return false;
+        }
+    }
+
+    public function getFlexibleDateDurations($request)
+    {
+        try {
+
+            return $this->flexible_expireDate_duration->getFlexibleDateDurations($request->language,$request->search);
+
+        }catch(\Exception){
+            return false;
+        }
+    }
+
+    public function getPitchTemplates($request)
+    {
+        try {
+            return $this->pitch_template->getPitchTemplates($request->language,$request->search);
+        } catch (\Exception) {
+            return false;
+        }
+    }
+
+    public function getLabConditions($request)
+    {
+        try {
+            return $this->lab_condition->getLabConditions($request->language,$request->search);
+        } catch (\Exception) {
+            return false;
         }
     }
 }
