# storage/api-docs/api-docs.json
@@ -547,14 +547,14 @@
                 }
             }
         },
-        "/api/v1/master/acheivement-condition-list": {
+        "/api/v1/master/achievement-condition-list": {
             "get": {
                 "tags": [
-                    "Master API - Acheivement Condition List"
+                    "Master API - achievement Condition List"
                 ],
-                "summary": "Finds lists of project acheivement condition list",
-                "description": "Get all list of project acheivement condition list",
-                "operationId": "getAcheivementConditionLists",
+                "summary": "Finds lists of project achievement condition list",
+                "description": "Get all list of project achievement condition list",
+                "operationId": "getAchievementConditionLists",
                 "parameters": [
                     {
                         "name": "language",
@@ -595,6 +595,126 @@
                 "summary": "Finds lists of Host",
                 "description": "Get all list of Host",
                 "operationId": "getHosts",
+                "parameters": [
+                    {
+                        "name": "language",
+                        "in": "query",
+                        "description": "Language values that needed to be considered for choose languages",
+                        "required": true,
+                        "explode": true
+                    },
+                    {
+                        "name": "search",
+                        "in": "query",
+                        "description": "Search values that needed to be considered for filter",
+                        "required": false,
+                        "explode": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successful operation"
+                    },
+                    "404": {
+                        "description": "Not found!"
+                    },
+                    "400": {
+                        "description": "Bad request!"
+                    },
+                    "500": {
+                        "description": "Internal Server Error!"
+                    }
+                }
+            }
+        },
+        "/api/v1/master/flexible-date-duration": {
+            "get": {
+                "tags": [
+                    "Master API - Flexible Date Duration"
+                ],
+                "summary": "Finds lists of flexible date duration",
+                "description": "Get all list of flexible date duration",
+                "operationId": "getFlexibleDateDurations",
+                "parameters": [
+                    {
+                        "name": "language",
+                        "in": "query",
+                        "description": "Language values that needed to be considered for choose languages",
+                        "required": true,
+                        "explode": true
+                    },
+                    {
+                        "name": "search",
+                        "in": "query",
+                        "description": "Search values that needed to be considered for filter",
+                        "required": false,
+                        "explode": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successful operation"
+                    },
+                    "404": {
+                        "description": "Not found!"
+                    },
+                    "400": {
+                        "description": "Bad request!"
+                    },
+                    "500": {
+                        "description": "Internal Server Error!"
+                    }
+                }
+            }
+        },
+        "/api/v1/master/pitch-templates": {
+            "get": {
+                "tags": [
+                    "Master API - Pitch Templates"
+                ],
+                "summary": "Finds lists of pitch templates",
+                "description": "Get all list of pitch templates",
+                "operationId": "getPitchTemplates",
+                "parameters": [
+                    {
+                        "name": "language",
+                        "in": "query",
+                        "description": "Language values that needed to be considered for choose languages",
+                        "required": true,
+                        "explode": true
+                    },
+                    {
+                        "name": "search",
+                        "in": "query",
+                        "description": "Search values that needed to be considered for filter",
+                        "required": false,
+                        "explode": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successful operation"
+                    },
+                    "404": {
+                        "description": "Not found!"
+                    },
+                    "400": {
+                        "description": "Bad request!"
+                    },
+                    "500": {
+                        "description": "Internal Server Error!"
+                    }
+                }
+            }
+        },
+        "/api/v1/master/lab-conditions": {
+            "get": {
+                "tags": [
+                    "Master API - Lab Conditions"
+                ],
+                "summary": "Finds lists of lab conditions",
+                "description": "Get all list of lab conditions",
+                "operationId": "getLabConditions",
                 "parameters": [
                     {
                         "name": "language",
